# userappAN/src/app/services1/models.ts
@@ -2,5 +2,5 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export { Planning } from './models/planning';
+export { GanttChart } from './models/gantt-chart';
 export { Task } from './models/task';
