# userappAN/src/openapi/plan.json
@@ -11,6 +11,47 @@
         }
     ],
     "paths": {
+        "/gantt-chart/update/{id}": {
+            "put": {
+                "tags": [
+                    "gantt-chart-controller"
+                ],
+                "operationId": "updateGanttChart",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/GanttChart"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GanttChart"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/Task/updateTask/{idTask}": {
             "put": {
                 "tags": [
@@ -52,71 +93,17 @@
                 }
             }
         },
-        "/Plan/{idPlan}/assignTasks": {
-            "put": {
+        "/gantt-chart/save": {
+            "post": {
                 "tags": [
-                    "planning-controller"
+                    "gantt-chart-controller"
                 ],
-                "operationId": "assignTasksToPlanning",
-                "parameters": [
-                    {
-                        "name": "idPlan",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    },
-                    {
-                        "name": "taskIds",
-                        "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "integer",
-                                "format": "int64"
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "*/*": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Planning"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/Plan/updatePlanning/{idPlan}": {
-            "put": {
-                "tags": [
-                    "planning-controller"
-                ],
-                "operationId": "updatePlanning",
-                "parameters": [
-                    {
-                        "name": "idPlan",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
+                "operationId": "saveGanttChart",
                 "requestBody": {
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/Planning"
+                                "$ref": "#/components/schemas/GanttChart"
                             }
                         }
                     },
@@ -128,7 +115,7 @@
                         "content": {
                             "*/*": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Planning"
+                                    "$ref": "#/components/schemas/GanttChart"
                                 }
                             }
                         }
@@ -166,29 +153,87 @@
                 }
             }
         },
-        "/Plan/add": {
-            "post": {
+        "/gantt-chart/{ganttChartId}/tasks": {
+            "get": {
                 "tags": [
-                    "planning-controller"
+                    "gantt-chart-controller"
                 ],
-                "operationId": "addPlanning",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/Planning"
-                            }
+                "operationId": "getTasksByGanttChartId",
+                "parameters": [
+                    {
+                        "name": "ganttChartId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
                         }
-                    },
-                    "required": true
-                },
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "content": {
                             "*/*": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Planning"
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Task"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/gantt-chart/getGanttChartById/{id}": {
+            "get": {
+                "tags": [
+                    "gantt-chart-controller"
+                ],
+                "operationId": "getGanttChartById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GanttChart"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/gantt-chart/all": {
+            "get": {
+                "tags": [
+                    "gantt-chart-controller"
+                ],
+                "operationId": "getAllGanttCharts",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/GanttChart"
+                                    }
                                 }
                             }
                         }
@@ -250,15 +295,15 @@
                 }
             }
         },
-        "/Plan/{idPlan}/tasks": {
-            "get": {
+        "/gantt-chart/deleteGanttChart/{id}": {
+            "delete": {
                 "tags": [
-                    "planning-controller"
+                    "gantt-chart-controller"
                 ],
-                "operationId": "getTasksByPlanningId",
+                "operationId": "deleteGanttChart",
                 "parameters": [
                     {
-                        "name": "idPlan",
+                        "name": "id",
                         "in": "path",
                         "required": true,
                         "schema": {
@@ -269,71 +314,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "content": {
-                            "*/*": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/Task"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/Plan/getPlannings": {
-            "get": {
-                "tags": [
-                    "planning-controller"
-                ],
-                "operationId": "getAllPlannings",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "*/*": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/Planning"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/Plan/getPlanningById/{idPlan}": {
-            "get": {
-                "tags": [
-                    "planning-controller"
-                ],
-                "operationId": "getPlanningById",
-                "parameters": [
-                    {
-                        "name": "idPlan",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "*/*": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Planning"
-                                }
-                            }
-                        }
+                        "description": "OK"
                     }
                 }
             }
@@ -365,6 +346,36 @@
     },
     "components": {
         "schemas": {
+            "GanttChart": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "taskName": {
+                        "type": "string"
+                    },
+                    "startDate": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "endDate": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "progress": {
+                        "type": "number",
+                        "format": "double"
+                    },
+                    "tasks": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Task"
+                        }
+                    }
+                }
+            },
             "Task": {
                 "type": "object",
                 "properties": {
@@ -397,25 +408,6 @@
                             "IN_PROGRESS",
                             "COMPLETED"
                         ]
-                    }
-                }
-            },
-            "Planning": {
-                "type": "object",
-                "properties": {
-                    "idPlan": {
-                        "type": "integer",
-                        "format": "int64"
-                    },
-                    "name": {
-                        "type": "string"
-                    },
-                    "tasks": {
-                        "uniqueItems": true,
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/Task"
-                        }
                     }
                 }
             }
